@@ -34,13 +34,14 @@ dependencies {
     implementation project(':ballerina-lang:regexp');
     implementation project(':observability-symbol-collector');
 
-    testCompile 'org.mockito:mockito-all'
-    testCompile 'org.wso2.transport.http:org.wso2.transport.http.netty'
-    testCompile 'org.wso2.carbon.messaging:org.wso2.carbon.messaging'
-    testCompile 'org.testng:testng'
-    testCompile project(path: ':ballerina-test-utils', configuration: 'shadow')
-    testCompile project(':ballerina-runtime')
-    testRuntime project(':ballerina-runtime')
+    testImplementation "org.mockito:mockito-core:${project.mockitoCoreVersion}"
+    testImplementation "org.mockito:mockito-testng:${project.mockitoTestNGVersion}"
+    testImplementation 'org.wso2.transport.http:org.wso2.transport.http.netty'
+    testImplementation 'org.wso2.carbon.messaging:org.wso2.carbon.messaging'
+    testImplementation 'org.testng:testng'
+    testImplementation project(path: ':ballerina-test-utils', configuration: 'shadow')
+    testImplementation project(':ballerina-runtime')
+    testRuntimeOnly project(':ballerina-runtime')
 
     distributionBala project(path: ':testerina:testerina-core', configuration: 'distributionBala')
 
@@ -74,7 +75,7 @@ test {
     systemProperty "java.util.logging.config.file", "src/test/resources/logging.properties"
     systemProperty "enableJBallerinaTests", "true"
 
-    jvmArgs = ['-Xms512m', '-Xmx3g']
+    jvmArgs = ['-Xms512m', '-Xmx3g', '--add-opens=java.base/java.util=ALL-UNNAMED']
 
     useTestNG() {
         suites 'src/test/resources/testng.xml'
@@ -96,11 +97,12 @@ test {
 }
 
 configurations {
-    testCompile.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
-    testCompile.exclude group: 'org.slf4j', module: 'slf4j-simple'
-    testCompile.exclude group: 'org.ops4j.pax.logging', module: 'pax-logging-api'
+    testImplementation.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+    testImplementation.exclude group: 'org.slf4j', module: 'slf4j-simple'
+    testImplementation.exclude group: 'org.ops4j.pax.logging', module: 'pax-logging-api'
 }
 
 configurations.all {
     resolutionStrategy.preferProjectModules()
 }
+tasks.compileTestJava.dependsOn(':ballerina-lang-test:copyInteropImports')
